# rust-tensorflow-mini

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
data/: model.txt
examples/: dataloader_example.rs  linear_reg_example.rs  load_save_example.rs  main.rs
src/: error.rs  lib.rs  main.rs  prelude.rs
src/utils/: categorical_cross_entropy.rs  cc_entropy.rs  data.rs  dataloader.rs  layer_dense.rs  loss.rs  mod.rs  neural_network.rs  optimizer_adam.rs  optimizer_sdg.rs  optimizer_sgd.rs  relu.rs  save_load.rs  softmax.rs  visualize.rs
tests/: test_dataloader.rs  test_layer_dense.rs  test_relu.rs
