[package]
name = "rust-tensorflow-mini"
version = "0.1.0"
edition = "2021"


[lib]
name = "rust_tensorflow_mini"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
plotters = "0.3.4"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
serde = {version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.70"
